[build-system]
requires = ["setuptools>=61.0", "scp", "paramiko", "psycopg2-binary"]
build-backend = "setuptools.build_meta"

[project]
name = "wa_infra_tools"
version = "0.0.1"
authors = [
  { name="Brian Hu", email="bhu49@wisc.edu" },
]
description = "Suite of infra tools for Wisconsin Autonomous"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Github" = "https://github.com/brian-hu/wa_infra_tools"
